// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Permissions Empty gateway object in smaug configuration gives default permissions 1`] = `
Object {
  "allowRootFields": Array [
    "debug",
    "draft",
    "manifestation",
    "manifestations",
    "search",
    "work",
    "works",
    "suggest",
    "complexSearch",
    "complexSearchIndexes",
    "complexSuggest",
    "localSuggest",
    "recommend",
    "recommendations",
    "infomedia",
    "refWorks",
    "ris",
    "elba",
    "library",
    "relatedSubjects",
    "linkCheck",
    "series",
    "universe",
    "mood",
  ],
  "denyTypes": Array [
    "CheckOrderPolicy",
    "Availability",
    "SEO",
    "Periodical",
    "PeriodicalArticle",
  ],
}
`;

exports[`Permissions Explicitly setting allowRootFields in gateway object in smaug configuration gives those permissions 1`] = `
Object {
  "allowRootFields": Array [
    "manifestation",
  ],
}
`;

exports[`Permissions Role from gateway object in smaug configuration gives the roles' permissions 1`] = `
Object {
  "allowRootFields": Array [
    "debug",
    "draft",
    "manifestation",
    "manifestations",
    "search",
    "work",
    "works",
    "suggest",
    "complexSearch",
    "complexSearchIndexes",
    "complexSuggest",
    "localSuggest",
    "recommend",
    "recommendations",
    "infomedia",
    "refWorks",
    "ris",
    "elba",
    "library",
    "relatedSubjects",
    "linkCheck",
    "series",
    "universe",
    "mood",
    "submitOrder",
  ],
  "denyTypes": Array [
    "CheckOrderPolicy",
    "Availability",
    "SEO",
    "Periodical",
    "PeriodicalArticle",
    "WorkReview",
  ],
}
`;

exports[`Permissions Unknown role from gateway object in smaug configuration gives default permissions 1`] = `
Object {
  "allowRootFields": Array [
    "debug",
    "draft",
    "manifestation",
    "manifestations",
    "search",
    "work",
    "works",
    "suggest",
    "complexSearch",
    "complexSearchIndexes",
    "complexSuggest",
    "localSuggest",
    "recommend",
    "recommendations",
    "infomedia",
    "refWorks",
    "ris",
    "elba",
    "library",
    "relatedSubjects",
    "linkCheck",
    "series",
    "universe",
    "mood",
  ],
  "denyTypes": Array [
    "CheckOrderPolicy",
    "Availability",
    "SEO",
    "Periodical",
    "PeriodicalArticle",
  ],
}
`;

exports[`Permissions admin set to true in smaug configuration 1`] = `
Object {
  "admin": true,
}
`;

exports[`Permissions no gateway object in smaug configuration gives default permissions 1`] = `
Object {
  "allowRootFields": Array [
    "debug",
    "draft",
    "manifestation",
    "manifestations",
    "search",
    "work",
    "works",
    "suggest",
    "complexSearch",
    "complexSearchIndexes",
    "complexSuggest",
    "localSuggest",
    "recommend",
    "recommendations",
    "infomedia",
    "refWorks",
    "ris",
    "elba",
    "library",
    "relatedSubjects",
    "linkCheck",
    "series",
    "universe",
    "mood",
  ],
  "denyTypes": Array [
    "CheckOrderPolicy",
    "Availability",
    "SEO",
    "Periodical",
    "PeriodicalArticle",
  ],
}
`;
